--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,13 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/ouassvtc.png",
+      "src": "/vtc-perpignan.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/ouassvtc.png",
+      "src": "/vtc-perpignan.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
